@@ -158,10 +158,6 @@ Mojolicious
 
 =item *
 
-Mojolicious::Plugin::Gravatar
-
-=item *
-
 Mojolicious::Plugin::Ident
 
 =item *
