@@ -157,10 +157,6 @@ Mojolicious
 
 =item *
 
-Mojolicious::Plugin::Gravatar
-
-=item *
-
 Mojolicious::Plugin::Ident
 
 =item *
